Fix for windows